--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,6 @@
 {
-    "compilerOptions": {
-      "baseUrl": ".",
-      "paths": {
-        "@/*": ["./*"]
-      }
-    }
+  "compilerOptions": {
+  "baseUrl": "src"
+  },
+  "include": ["src"]
   }
-  
